# cellaret-new

./: .gitignore  README.md  main.py  manage.py  pyproject.toml
.github/workflows/: ci.yml
accounts/: forms.py  urls.py  utils.py  views.py
accounts/services/: auth_service.py
accounts/templates/accounts/: change_password.html  detail.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  password_reset_subject.txt  signup.html
cellaret/: asgi.py  settings.py  urls.py  wsgi.py
cellaret/static/css/: accounts.css  cellars.css  controls.css  detail.css  nav.css  pagination.css  styles.css  tailwind.css
cellaret/static/js/: accounts.js  cellars.js
cellaret/templates/: base.html
cellaret/templates/components/: cellar_modal.html  controls_bar.html  filter_sidebar.html  pagination.html  (+2 more)
cellars/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
cellars/migrations/: 0001_initial.py  0002_bottle.py  0003_remove_bottle_name.py  0004_cellar_unique_cellar_name_per_user.py
cellars/selectors/: __init__.py  cellars.py
cellars/services/: __init__.py  catalog.py  cellars.py
products/: forms.py  models.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_alter_product_price.py  0003_alter_product_price.py  0004_alter_product_degree_alter_product_grape_variety_and_more.py  0005_product_image_url.py  0006_product_category_path.py
products/selectors/: __init__.py  product_catalog.py
products/services/: __init__.py  catalog.py  saq_api.py
(+6 files in other folders)
